# shorts_maker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.py  example.setup.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
ShortsMaker/: __init__.py  ask_llm.py  generate_image.py  logging_config.py  moviepy_create_video.py  shorts_maker.py
ShortsMaker/examples/: submission_metadata.txt
ShortsMaker/utils/: __init__.py  audio_transcript.py  colors_dict.py  download_youtube_music.py  download_youtube_video.py  get_tts.py  logging_config.py  notify_discord.py  retry.py  tiktokvoice.py
assets/educational_guide/: README.md
docs/: CNAME  index.html
tests/: conftest.py  test_ask_llm.py  test_dir_creations.py  test_generate_audio.py  test_generate_audio_transcript.py  test_generate_image.py  test_get_reddit_post.py  test_has_alpha_and_digit.py  test_ollama_service.py  test_shorts_maker.py  test_split_alpha_and_digit.py  test_whisperx_requirements.py
tests/ask_llm_tests/: test_ask_llm.py  test_ollama_service.py
tests/data/: setup.yml  test.txt  transcript.json
tests/generate_image_tests/: test_generate_image.py
tests/moviepy_create_video_tests/: test_moviepy_create_video.py
tests/shorts_maker_tests/: test_abbreviation_replacer.py  test_fix_text.py  test_shorts_maker.py
tests/utils_tests/: test_audio_transcript.py  test_colors_dict.py  test_download_youtube_music.py  test_download_youtube_video.py  test_get_tts.py  test_logging_config.py  test_notify_discord.py  test_retry.py
