[project]
name = "ShortsMaker"
version = "0.2.0"
description = "A python project to make and upload Youtube shorts video"
authors = [
    {name = "rajathjn",email = "rajathjnx@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate>=1.3.0",
    "beautifulsoup4>=4.13.3",
    "diffusers>=0.32.2",
    "discord-webhook>=1.3.1",
    "ftfy>=6.3.1",
    "langchain-ollama>=0.2.3",
    "language-tool-python>=2.8.2",
    "moviepy>=2.1.2",
    "ollama>=0.4.7",
    "praw>=7.8.1",
    "psutil>=6.1.1",
    "pydub>=0.25.1",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
    "unidecode>=1.3.8",
    "wheel>=0.45.1",
    "whisperx>=3.3.1",
    "moviepy>=2.1.2",
    "yt-dlp>=2025.2.19",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchaudio = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
# Set the maximum line length to 79.
exclude = [
    ".pytest_cache",
    ".venv",
    ".vscode",
    ".idea"
]
line-length = 200
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
]
