[project]
name = "ShortsMaker"
version = "0.2.0"
description = "A python project to make and upload Youtube shorts video"
authors = [
    {name = "rajathjn",email = "rajathjnx@gmail.com"}
]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "accelerate>=1.13.0",
  "beautifulsoup4>=4.14.3",
  "colorlog>=6.10.1",
  "diffusers>=0.37.0",
  "discord-webhook>=1.4.1",
  "ftfy>=6.3.1",
  "h11>=0.16.0",
  "jinja2>=3.1.6",
  "langchain-ollama>=1.0.1",
  "language-tool-python>=3.3.0",
  "lxml>=6.0.2",
  "moviepy>=2.2.1",
  "ollama>=0.6.1",
  "praw>=7.8.1",
  "psutil>=7.2.2",
  "pydub>=0.25.1",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.3",
  "requests>=2.32.5",
  "setuptools>=82.0.1",
  "transformers>=5.3.0",
  "unidecode>=1.4.0",
  "wheel>=0.46.3",
  "whisperx>=3.7.2",
  "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "requests-mock>=1.12.1",
  "ruff>=0.15.7",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
]
cu128 = [
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
]
cu130 = [
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
# Set the maximum line length to 79.
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    "_build",
    "build",
    "venv",
    ".pytest_cache",
    ".venv",
    ".vscode",
    ".idea"
]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
